Fix works section mobile layout: center the work box and improve positioning

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -82,9 +82,11 @@
     @include mobile {
       height: 100vh;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
       min-height: 600px;
+      position: relative;
+      left: auto;
     }
 
     .container {
@@ -92,6 +94,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+      @include mobile {
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+      }
 
       .item {
         width: 650px;
@@ -109,11 +118,12 @@
         @include mobile {
           width: 95%;
           height: 460px;
-          margin: 0;
+          margin: 0 auto;
           flex-direction: column;
           gap: 25px;
           min-height: 460px;
           padding: 20px;
+          align-self: center;
         }
 
         .left {
